--- a/Frontend/src/Assets/Styles/Registration/institutionSignUp.css
+++ b/Frontend/src/Assets/Styles/Registration/institutionSignUp.css
@@ -1,4 +1,4 @@
-/* .inst-form {
+.inst-form {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
@@ -64,4 +64,4 @@
 
 .inst-button a:hover {
   background-color: #0056b3;
-} */
+}
