--- a/Frontend/src/Assets/Styles/Registration/login.css
+++ b/Frontend/src/Assets/Styles/Registration/login.css
@@ -1,4 +1,4 @@
-/* .log-form {
+.log-form {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
@@ -54,4 +54,4 @@
   .log-input-field input[type="button"] {
     background-color: #0056b3;
   }
-   */
+  
