--- a/Frontend/src/Assets/Styles/Registration/govSignUp.css
+++ b/Frontend/src/Assets/Styles/Registration/govSignUp.css
@@ -1,4 +1,4 @@
-/* .stud-form {
+.gov-form {
   max-width: 400px;
   margin: 0 auto;
   padding: 20px;
@@ -7,27 +7,27 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.stud-form p {
+.gov-form p {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
   color: #007bff; 
 }
 
-.stud-title {
+.gov-title {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 20px;
   display: block;
 }
 
-.stud-input-field {
+.gov-input-field {
   margin-bottom: 15px;
   padding-right: 35px;
 }
 
-.stud-input-field input[type="text"],
-.stud-input-field input[type="password"] {
+.gov-input-field input[type="text"],
+.gov-input-field input[type="password"] {
   width: 100%;
   padding: 10px;
   padding-right: 35px;
@@ -35,28 +35,28 @@
   font-size: 16px;
 }
 
-.stud-gov-input {
+.gov-input {
   position: relative;
 }
 
-.stud-password {
+.gov-password {
   padding-right: 35px;
 }
 
-.stud-button {
+.gov-button {
   text-align: center;
 }
 
-.stud-login-signup {
+.gov-login-signup {
   display: flex;
   justify-content: center;
 }
 
-.stud-signup-link {
+.gov-signup-link {
   color: #007bff;
 }
 
-.stud-button a {
+.gov-button a {
   display: inline-block;
   padding: 10px 20px;
   background-color: #007bff;
@@ -66,6 +66,6 @@
   transition: background-color 0.3s;
 }
 
-.stud-button a:hover {
+.gov-button a:hover {
   background-color: #0056b3;
-} */
+}
