--- a/Frontend/src/Assets/Styles/Registration/registerPage.css
+++ b/Frontend/src/Assets/Styles/Registration/registerPage.css
@@ -1,4 +1,4 @@
-/* .register {
+.register {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,4 +55,4 @@
 .button a:hover {
   background-color: #0056b3;
 }
- */
+
