--- a/Frontend/src/Assets/Styles/Registration/govSignUp.css
+++ b/Frontend/src/Assets/Styles/Registration/govSignUp.css
@@ -1,75 +1,5 @@
-.gov-form {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #f4f4f4;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
-.gov-form p {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #007bff; 
-}
 
-.gov-title {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  display: block;
-}
-
-.gov-input-field {
-  margin-bottom: 15px;
-  padding-right: 35px;
-}
-
-.gov-input-field input[type="text"],
-.gov-input-field input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  padding-right: 35px;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.gov-input {
-  position: relative;
-}
-
-.gov-password {
-  padding-right: 35px;
-}
-
-.gov-button {
-  text-align: center;
-}
-
-.gov-login-signup {
-  display: flex;
-  justify-content: center;
-}
-
-.gov-signup-link {
-  color: #007bff;
-}
-
-.gov-button a {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.gov-button a:hover {
-  background-color: #0056b3;
-}
-
-.error{
-  color: red;
+.smaller-container{
+  width: 65%;
 }
