--- a/Frontend/src/Assets/Styles/Registration/registerContent.css
+++ b/Frontend/src/Assets/Styles/Registration/registerContent.css
@@ -1,51 +1,7 @@
 
-.regCon-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  width :50%;
-  background-color: #f5f5f5;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.regCon-what p {
-  font-size: 24px;
-  font-weight: bold;
-  color: #007bff;
-}
-
-.regCon-option button {
-  margin: 0 10px;
-  padding: 10px 20px;
-  background-color: #007bff; 
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.regCon-option button:hover {
-  background-color: #0056b3; 
-}
-
-.regCon-login-signup .regCon-text {
-  font-size: 14px;
-  color: #000000; 
-}
-
-.regCon-login-signup .regCon-text a {
-  color: #007bff; 
-}
-
-.regCon-login-signup .regCon-text a.regCon-signup-link:hover {
-  text-decoration: underline;
-}
-
-
- 
+  .regCon-option{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+  }
