--- a/Frontend/src/Assets/Styles/Home/header.module.css
+++ b/Frontend/src/Assets/Styles/Home/header.module.css
@@ -10,51 +10,6 @@ header{
   width: 100%;;
 }
 
-.container{
-  max-width: 1440px;
-  padding: 0 50px;
-  margin: 0 auto;
-}
-
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.logo img{
-  display: block;
-  object-fit: cover;
-  width: 30%;
-}
-
-.navbar nav{
-  display: flex;
-  align-items: center;
-  padding: 10px 0;
-}
-
-.navbar nav li{
-  list-style: none;
-  margin-left: 1rem;
-}
-.navbar .btn{
-  font-size: 1.2rem;
-  color: #000000;
-  align-items: center;
-  cursor: pointer;
-  display: none;
-}
-
-.navbar nav li a{
-  text-decoration: none;
+.link-style{
   color: #fff;
-  font-size: 1.1rem;
-  padding: 0.7rem 0.6rem;
-  border-radius: 6px;
-  transition: all 0.4s ease-in;
-}
-
-.navbar nav li a:hover{
-  background: #3498db;
-  text-decoration: underline;
 }
